# Rival25

./: .clang-format  .gitignore  ConfigureODesc.py  README.md  startup.sh
.github/workflows/: main.yml
src/odesc/: CMakeLists.txt  odesc_plugin.xml  package.xml
src/odesc/include/odesc/: odesc_hw_interface.hpp
src/odesc/src/: odesc_hw_interface.cpp
src/odesc_driver/: CMakeLists.txt  package.xml
src/odesc_driver/dbc/: odrive-cansimple.dbc
src/odesc_driver/include/odesc_driver/: axis_encoder_only_interface.hpp  axis_encoder_only_node.hpp  axis_node.hpp  axis_rx_interface.hpp  axis_trx_interface.hpp
src/odesc_driver/include/odesc_driver/can/: receivers.hpp
src/odesc_driver/include/odesc_driver/mixins/: axis_node_publisher.hpp  receivers.hpp  transmitters.hpp  util.hpp
src/odesc_driver/src/: axis_encoder_only_interface.cpp  axis_encoder_only_node.cpp  axis_node.cpp  axis_rx_interface.cpp  axis_trx_interface.cpp
src/odesc_driver/src/mixins/: util.cpp
src/swerve/: CMakeLists.txt  package.xml  swerve_plugin.xml
src/swerve/include/swerve/: swerve_controller.hpp  swerve_module_interface.hpp
src/swerve/src/: swerve_controller.cpp  swerve_module_interface.cpp  test_publisher.cpp
src/swerve/test/config/: swerve_controller.yaml  swerve_module_controllers.yaml
src/swerve/test/launch/: swerve_module.launch.py
src/swerve/test/urdf/: swerve_module.urdf.xacro
